fix: mobile view (iphone 12 pro) with spacing error

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@
   }
 
   .grid-container {
-    @apply grid grid-cols-12 gap-x-9 lg:mx-16 mx-4;
+    @apply grid lg:grid-cols-12 lg:mx-16 grid-cols-4 mx-4;
   }
 
   .grid-container.content aside {
